Test set-up works.

--- a/index.html
+++ b/index.html
@@ -19,36 +19,53 @@
 
       <nav class="navigation hide">
         <ul>
-          <li><a href="#">Topic</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#">Topic</a></li>
           <li><a href="#">Topic</a></li>
         </ul>
       </nav>
-
     </header>
 
-    <main class="main" id="mainCont">
+    <main class="main" id="mainHomeCont">
+      
       <h2>How to use this site!</h2>
-      <!-- The topics are appended here! -->
-
+      <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
+        <h3>This is a code test Example</h3>
 
-        <h3>This is the an Example</h3>
-
-        <div class="codeExample">
-          <h4>The Code:</h4>
-          <code>console.log("Hello");</code>
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="codeTestID_1"></div>
         </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Output</button>
 
-        <button type="button">Show Outcome</button>
-
-        <div class="codeExample">
-          <h4>The Outcome:</h4>
-          <code>"Hello";</code>
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ocTest_1"></div>
+          </div>
         </div>
-
       </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>This is another code test Example</h3>
 
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="codeTestID_2"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Output</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ocTest_2"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
     </main>
 
 
