Added untracked files from prev commit.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Stewart MacLeman">
     <meta name="description" content="A JavaScript Cheat-Sheet.">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./scripts/00_examples.js" defer></script>
     <script src="./main.js" defer></script>
 
     <title>JS Cheat-Sheet</title>
@@ -20,14 +21,14 @@
       <nav class="navigation hide">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Topic</a></li>
+          <li><a href="./pages/01_typeof.html">"typeof" Operator</a></li>
           <li><a href="#">Topic</a></li>
         </ul>
       </nav>
     </header>
 
-    <main class="main" id="mainHomeCont">
-      
+    <main class="main">
+
       <h2>How to use this site!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
