Number Operators section added.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="./pages/01_typeof.html">"typeof" Operator</a></li>
-          <li><a href="#">Topic</a></li>
+          <li><a href="./pages/02_numberOperators.html">Number Operators</a></li>
         </ul>
       </nav>
     </header>
@@ -39,7 +39,7 @@
           <div id="codeTestID_1"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -57,7 +57,7 @@
           <div id="codeTestID_2"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
