--- a/pages/01_typeof.html
+++ b/pages/01_typeof.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="#">"typeof" Operator</a></li>
-          <li><a href="#">Topic</a></li>
+          <li><a href="./02_numberOperators.html">Number Operators</a></li>
         </ul>
       </nav>
     </header>
@@ -39,7 +39,7 @@
           <div id="typeofCode_1"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -57,7 +57,7 @@
           <div id="typeofCode_2"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -75,7 +75,7 @@
           <div id="typeofCode_3"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -93,7 +93,7 @@
           <div id="typeofCode_4"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -111,7 +111,7 @@
           <div id="typeofCode_5"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -129,7 +129,7 @@
           <div id="typeofCode_6"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -147,7 +147,7 @@
           <div id="typeofCode_7"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
@@ -165,12 +165,30 @@
           <div id="typeofCode_8"></div>
         </div>
         <!-- Displays the code outcome. -->
-        <button type="button" class="outcomeBut">Show Output</button>
+        <button type="button" class="outcomeBut">Show Outcome</button>
 
         <div class="hide">
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="typeofOutput_8"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>typeof Operator: NaN</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="typeofCode_9"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="typeofOutput_9"></div>
           </div>
         </div>
       </div>
