--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="./pages/01_typeof.html">"typeof" Operator</a></li>
           <li><a href="./pages/02_numberOperators.html">Number Operators</a></li>
+          <li><a href="./pages/03_comparisonOperators.html">Comparison Operators</a></li>
         </ul>
       </nav>
     </header>
