--- a/pages/02_numberOperators.html
+++ b/pages/02_numberOperators.html
@@ -23,6 +23,8 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="./01_typeof.html">"typeof" Operator</a></li>
           <li><a href="#">Number Operators</a></li>
+          <li><a href="./03_comparisonOperators.html">Comparison Operators</a></li>
+
         </ul>
       </nav>
     </header>
