--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <nav class="navigation hide">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="./pages/01_typeof.html">"typeof" Operator</a></li>
-          <li><a href="./pages/02_numberOperators.html">Number Operators</a></li>
+          <li><a href="./pages/01_typeof.html">The "typeof" Operator</a></li>
+          <li><a href="./pages/02_arithmeticOperators.html">Arithmetic Operators</a></li>
           <li><a href="./pages/03_comparisonOperators.html">Comparison Operators</a></li>
         </ul>
       </nav>
