--- a/pages/01_typeof.html
+++ b/pages/01_typeof.html
@@ -15,14 +15,14 @@
   <body>
 
     <header class="header">
-      <h1>JS Cheat-Sheet: "typeof" Operator</h1>
+      <h1>JS Cheat-Sheet: The "typeof" Operator</h1>
       <button type="button" class="navButton">Show Nav</button>
 
       <nav class="navigation hide">
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="#">"typeof" Operator</a></li>
-          <li><a href="./02_numberOperators.html">Number Operators</a></li>
+          <li><a href="#">The "typeof" Operator</a></li>
+          <li><a href="./02_arithmeticOperators.html">Arithmetic Operators</a></li>
           <li><a href="./03_comparisonOperators.html">Comparison Operators</a></li>
 
         </ul>
