--- a/pages/02_arithmeticOperators.html
+++ b/pages/02_arithmeticOperators.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Stewart MacLeman">
     <meta name="description" content="A JavaScript Cheat-Sheet.">
     <link rel="stylesheet" href="../styles.css">
-    <script src="../scripts/02_numberOperators.js" defer></script>
+    <script src="../scripts/02_arithmeticOperators.js" defer></script>
     <script src="../main.js" defer></script>
 
     <title>JS Cheat-Sheet</title>
@@ -15,14 +15,14 @@
   <body>
 
     <header class="header">
-      <h1>JS Cheat-Sheet: Number Operators</h1>
+      <h1>JS Cheat-Sheet: Arithmetic Operators</h1>
       <button type="button" class="navButton">Show Nav</button>
 
       <nav class="navigation hide">
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="./01_typeof.html">"typeof" Operator</a></li>
-          <li><a href="#">Number Operators</a></li>
+          <li><a href="./01_typeof.html">The "typeof" Operator</a></li>
+          <li><a href="#">Arithmetic Operators</a></li>
           <li><a href="./03_comparisonOperators.html">Comparison Operators</a></li>
 
         </ul>
@@ -34,7 +34,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: + (Plus)</h3>
+        <h3>Arithmetic Operators: + (Plus)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -53,7 +53,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: + (Plus)</h3>
+        <h3>Arithmetic Operators: + (Plus)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -72,7 +72,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: + (Plus)</h3>
+        <h3>Arithmetic Operators: + (Plus)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -91,7 +91,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: - (Minus)</h3>
+        <h3>Arithmetic Operators: - (Minus)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -110,7 +110,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: - (Minus)</h3>
+        <h3>Arithmetic Operators: - (Minus)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -129,7 +129,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: - (Minus)</h3>
+        <h3>Arithmetic Operators: - (Minus)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -148,7 +148,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: * (Multiply)</h3>
+        <h3>Arithmetic Operators: * (Multiply)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -167,7 +167,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: / (Divide)</h3>
+        <h3>Arithmetic Operators: / (Divide)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -186,7 +186,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: % (Remainder / Modulo)</h3>
+        <h3>Arithmetic Operators: % (Remainder / Modulo)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -204,7 +204,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: % (Remainder / Modulo)</h3>
+        <h3>Arithmetic Operators: % (Remainder / Modulo)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -222,7 +222,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: ** (Exponential)</h3>
+        <h3>Arithmetic Operators: ** (Exponential)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -240,7 +240,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: ** (Exponential)</h3>
+        <h3>Arithmetic Operators: ** (Exponential)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -258,7 +258,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: ++ (Increment)</h3>
+        <h3>Arithmetic Operators: ++ (Increment)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -276,7 +276,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: ++ (Increment)</h3>
+        <h3>Arithmetic Operators: ++ (Increment)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -294,7 +294,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: -- (Decrement)</h3>
+        <h3>Arithmetic Operators: -- (Decrement)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -312,7 +312,7 @@
       </div>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>Number Operators: -- (Decrement)</h3>
+        <h3>Arithmetic Operators: -- (Decrement)</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
