--- a/pages/03_comparisonOperators.html
+++ b/pages/03_comparisonOperators.html
@@ -21,8 +21,8 @@
       <nav class="navigation hide">
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="./01_typeof.html">"typeof" Operator</a></li>
-          <li><a href="./02_numberOperators.html">Number Operators</a></li>
+          <li><a href="./01_typeof.html">The "typeof" Operator</a></li>
+          <li><a href="./02_arithmeticOperators.html">Arithmetic Operators</a></li>
           <li><a href="#">Comparison Operators</a></li>
         </ul>
       </nav>
