Additional section pages and script files added.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
           <li><a href="./pages/01_typeof.html">The "typeof" Operator</a></li>
           <li><a href="./pages/02_arithmeticOperators.html">Arithmetic Operators</a></li>
           <li><a href="./pages/03_comparisonOperators.html">Comparison Operators</a></li>
+          <li><a href="./pages/04_if_etc.html">"if" Statements etc.</a></li>
+          <li><a href="./pages/05_for_etc.html">"for" Statements etc.</a></li>
+          <li><a href="./pages/06_strings.html">Strings</a></li>
+          <li><a href="./pages/07_numbers.html">Numbers</a></li>
+          <li><a href="./pages/08_dates.html">Dates</a></li>
+          <li><a href="./pages/09_arrays.html">Arrays</a></li>
+          <li><a href="./pages/10_objects.html">Objects</a></li>
+          <li><a href="./pages/11_functions.html">Functions</a></li>
         </ul>
       </nav>
     </header>
