--- a/pages/01_typeof.html
+++ b/pages/01_typeof.html
@@ -24,7 +24,14 @@
           <li><a href="#">The "typeof" Operator</a></li>
           <li><a href="./02_arithmeticOperators.html">Arithmetic Operators</a></li>
           <li><a href="./03_comparisonOperators.html">Comparison Operators</a></li>
-
+          <li><a href="./04_if_etc.html">"if" Statements etc.</a></li>
+          <li><a href="./05_for_etc.html">"for" Statements etc.</a></li>
+          <li><a href="./06_strings.html">Strings</a></li>
+          <li><a href="./07_numbers.html">Numbers</a></li>
+          <li><a href="./08_dates.html">Dates</a></li>
+          <li><a href="./09_arrays.html">Arrays</a></li>
+          <li><a href="./10_objects.html">Objects</a></li>
+          <li><a href="./11_functions.html">Functions</a></li>
         </ul>
       </nav>
     </header>
