Content added to if etc section.

--- a/pages/04_if_etc.html
+++ b/pages/04_if_etc.html
@@ -41,7 +41,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"if" Statements etc.: </h3>
+        <h3>"if" Statements etc.: if</h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -54,6 +54,204 @@
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="ifEtcOutput_1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: if</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_2"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_2"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: if & else</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_3"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_3"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: if, else if & else</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_4"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_4"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: && (and) </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_5"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_5"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: || (or) </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_6"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_6"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: Ternary Operator</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_7"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_7"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: Ternary Operator</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_8"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_8"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: Ternary Operator</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_9"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_9"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: Switch</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_10"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_10"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: Switch</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_11"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_11"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"if" Statements etc.: Switch</h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="ifEtcCode_12"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="ifEtcOutput_12"></div>
           </div>
         </div>
       </div>
