Content added to the for etc section.

--- a/pages/05_for_etc.html
+++ b/pages/05_for_etc.html
@@ -41,7 +41,7 @@
       <h2>Scroll-down to view!</h2>
       <!-- ///////////////////////////////////////////////////// -->
       <div class="jsTopicCont">
-        <h3>"for" Statements etc.: </h3>
+        <h3>"for" Statements etc.: for </h3>
 
         <div class="codeExampleCont">
           <!-- The example code. -->
@@ -54,6 +54,132 @@
           <div class="codeOutcomeCont">
             <!-- The result. -->
             <div id="forEtcOutput_1"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"for" Statements etc.: for </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="forEtcCode_2"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="forEtcOutput_2"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"for" Statements etc.: for </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="forEtcCode_3"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="forEtcOutput_3"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"for" Statements etc.: for of </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="forEtcCode_4"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="forEtcOutput_4"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"for" Statements etc.: for in </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="forEtcCode_5"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="forEtcOutput_5"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"for" Statements etc.: while </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="forEtcCode_6"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="forEtcOutput_6"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"for" Statements etc.: while </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="forEtcCode_7"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="forEtcOutput_7"></div>
+          </div>
+        </div>
+      </div>
+      <!-- ///////////////////////////////////////////////////// -->
+      <div class="jsTopicCont">
+        <h3>"for" Statements etc.: do while </h3>
+
+        <div class="codeExampleCont">
+          <!-- The example code. -->
+          <div id="forEtcCode_8"></div>
+        </div>
+        <!-- Displays the code outcome. -->
+        <button type="button" class="outcomeBut">Show Outcome</button>
+
+        <div class="hide">
+          <div class="codeOutcomeCont">
+            <!-- The result. -->
+            <div id="forEtcOutput_8"></div>
           </div>
         </div>
       </div>
